samples/_failures_safe/1761155217_c20b85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05fbc9cc.c: In function ‘bfs’:
./samples/SAFE/__tmp_05fbc9cc.c:155:9: error: expected declaration or statement at end of input
  155 |         printf("%d ", current);
      |         ^~~~~~
./samples/SAFE/__tmp_05fbc9cc.c:155:9: error: expected declaration or statement at end of input
